fixed margin alignment.
fixed margin alignment,
then became height 100%.

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,7 +4,7 @@ footer {
   min-height: 5%;
   padding-top: 1rem;
   padding-bottom: 1rem;
-  margin-top: 1rem;
+  margin-top: 2%;
   @include box-sizing(border-box);
 
   text-align: center;
