--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,6 +1,6 @@
 header {
-  min-height: 30%;
-  height: 30%;
+  min-height: 23.5%;
+  height: 23.5%;
   width: 100%;
   @include debug_outline(red);
 }
