--- a/sass/modules/_animateSelectBox.scss
+++ b/sass/modules/_animateSelectBox.scss
@@ -6,7 +6,7 @@
   @include display-flex(flex);
   @include flex-direction(row);
   @include justify-content(space-around);
-  margin: 1.5rem auto;
+  margin: 2% auto;
 
   @include debug_outline(red);
 }
